--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ryan-rocks",
-  "version": "0.1.0",
-  "private": true,
+  "name": "gillrocks",
+  "version": "1.0.0",
+  "private": false,
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
